lox-tests/tests/operator/add_nil_nil.stderr
ERROR: Unsupported operation '+' between types 'nil' and 'nil'
 --> 1:1
  |
1 | nil + nil; // expect runtime error: Operands must be two numbers or two strings.
  | ^-------^
